--- a/cm/environment.yml
+++ b/cm/environment.yml
@@ -6,6 +6,7 @@ stg:
   DEPLOYMENT_BUCKET: xentity-deployment
   DESTINATION_BUCKET: xentity-datalake-example
   REQUIREMENTS_FILE: requirements.txt
+  PAPERMILL_LAYER: arn:aws:lambda:${self:provider.region}:${aws:accountId}:layer:papermill-layer:1
 
 prd:
   DEPLOYMENT_BUCKET: xentity-deployment
